[gd_scene load_steps=4 format=2]

[ext_resource path="res://Images/PokemonDebug/error_texture.png" type="Texture" id=1]
[ext_resource path="res://Model/Pokemon/PokemonSprite.gd" type="Script" id=2]
[ext_resource path="res://Model/utils/CollisionContainer.gd" type="Script" id=3]

[node name="PokemonSprite" type="Sprite"]
position = Vector2( -16, -16 )
texture = ExtResource( 1 )
centered = false
script = ExtResource( 2 )
animation_name = "Slap"
collision_visible = true
centering = 2

[node name="Collisions" type="Node2D" parent="."]
script = ExtResource( 3 )

[node name="RightPosition" type="Position2D" parent="."]
position = Vector2( 16, 16 )

[node name="LeftPosition" type="Position2D" parent="."]
position = Vector2( 16, 16 )

[node name="CenterPosition" type="Position2D" parent="."]
position = Vector2( 16, 16 )

[node name="ShootPosition" type="Position2D" parent="."]
position = Vector2( 16, 16 )

[node name="Collisions" type="Node2D" parent="."]
script = ExtResource( 3 )
